--- a/components/index.html
+++ b/components/index.html
@@ -3,7 +3,7 @@
 
 <head> <!--machine code-->
     <meta charset="UTF-8"> <!--Supplying support to any character the user input on the page, or exist in the code-->
-    <title> 🥳 Developed by: Diana 🥰 </title>
+    <title> 🥳 Developed by: Diana Nalelly 🥰 </title>
     <!-- Import Css File-->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
