--- a/components/portfolio.html
+++ b/components/portfolio.html
@@ -13,22 +13,22 @@
     <div class="container-fluid">
         <a href="portfolio.html"class="navbar-brand bg-light">LOGO</a>
     <ul class="navbar-nav bg-light">
-        <li classs=""navbar-item">Home</li>
+        <li classs="navbar-item">Home</li>
         <li classs="navbar-item">Voting System</li>
     </ul>
     </div>
 </nav>
 
 <div class="container">
-    <section id="hero"
-             <div class="container-fluid">
-                 <div class="row">
-                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                         <h1>Hi, my name is Diana Rojas</h1>
-                         <p>Im an up-and-coming web developer and we designer</p>
-                         </div>
-                     </div>
-
+    <section id="hero">
+         <div class="container-fluid">
+             <div class="row">
+                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                     <h1>Hi, my name is Diana Rojas</h1>
+                     <p>Im an up-and-coming web developer and we designer</p>
+                 </div>
+             </div>
+         </div>
     </section>
 
     <section id="about">
