reorganization of file structure

--- a/components/index.html
+++ b/components/index.html
@@ -5,30 +5,29 @@
     <meta charset="UTF-8"> <!--Supplying support to any character the user input on the page, or exist in the code-->
     <title> 🥳 Developed by: Diana Nalelly 🥰 </title>
     <!-- Import Css File-->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-<div class="pageContainer">
-    <div class="item navBar">
-
-        <div classs=""navLogo">
-            <h1>WebsiteName</h1>
+    <div class="pageContainer">
+        <div class="item navBar">
+            <div classs="navLogo">
+                <h1>WebsiteName</h1>
+            </div>
+            <ul class="MyUl">
+                <li>Home page</li>
+                <li>Services</li>
+                <li>Project Roadmap</li>
+            </ul>
+            <div class="item topBar">TopBar</div>
+            <div class="item bodyPart">
+                <!-- Hero Text Section-->
+                <h1> Body Part </h1>
+            </div>
+            <div class="item l-sPanel">Left Side Panel</div>
+            <div class="item r-sPanel">Right Side Panel</div>
+            <div class="item footer">Footer</div>
         </div>
-
-        <ul> class="MyUl"
-            <li>Home page</li>
-            <li>Services</li>
-            <li>Project Roadmap</li>
-        </ul>
-    <div class="item topBar">TopBar</div>
-    <div class="item bodyPart">
-        <!-- Hero Text Section-->
-        <h1> Body Part </h1>
     </div>
-    <div class="item l-sPanel">Left Side Panel</div>
-    <div class="item r-sPanel">Right Side Panel</div>
-    <div class="item footer">Footer</div>
-</div>
 </body>
 </html>
